--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     </header>
     <div class="hero-section">
         <div class="hero-msg">
-            You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. Click here to go to amazon.in Mg
+            You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. Click here to go to amazon.in
         </div>
     </div>
     <div class="shop-section">
